--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,9 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <netty.version>4.1.65.Final</netty.version>
-        <protostuff.version>1.7.2</protostuff.version>
+        <protostuff.version>1.7.4</protostuff.version>
+        <lombok.version>1.18.20</lombok.version>
+        <nacos.client.version>2.0.3</nacos.client.version>
     </properties>
 
     <dependencyManagement>
@@ -37,6 +39,17 @@
                 <groupId>io.protostuff</groupId>
                 <artifactId>protostuff-runtime</artifactId>
                 <version>${protostuff.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.alibaba.nacos/nacos-client -->
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>${nacos.client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
