--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,22 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <netty.version>4.1.65.Final</netty.version>
+        <netty.version>4.1.68.Final</netty.version>
         <protostuff.version>1.7.4</protostuff.version>
         <lombok.version>1.18.20</lombok.version>
         <nacos.client.version>2.0.3</nacos.client.version>
+        <spring.boot.version>2.5.5</spring.boot.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
